Fix spacing between elements and pull data into data file

--- a/components/Container/Container.module.scss
+++ b/components/Container/Container.module.scss
@@ -14,10 +14,6 @@
 .paddingY_md {
   padding-top: 4rem;
   padding-bottom: 4rem;
-  @media screen and (max-width: $bp-tablet) {
-    padding-top: 2rem;
-    padding-bottom: 2rem;
-  }
 }
 
 .paddingY_lg {
